tests/errors/semantic/blocking/ADD_SET_UNHASHABLE_TYPE_2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {(0,7),(4,2), (9,6)}
b = 4
a.add(b)

